# heel

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  EVAL.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  TRUST.md  pyproject.toml  run_demo.py  server.json
.github/: CODEOWNERS  dependabot.yml
.github/codex/prompt_queue/: manifest.json  progress.json
.github/codex/prompts/: 00A_build_codex_prompt_queue_agent.md  00_MASTER.md  01_reposition_continuous_abuse_rehearsal.md  02_adapter_contract_product_model.md  03_entitlement_graph.md  04_abuse_regressions.md  05_launch_review_mode.md  06_economic_severity.md  07_persona_system.md  08_scenario_packs_agent_mcp.md  09_control_simulator.md  10_heelbench.md  11_incident_to_scenario.md  12_dashboard_war_room.md  13_openapi_import_mvp.md  14_scenario_authoring_validation.md  15_positioning_docs.md  16_existing_product_mode.md  17_realish_local_saas_demo.md  18_ci_demo_commands.md  19_final_integration_pass.md
.github/workflows/: ci.yml  claude-review.yml  codeql.yml  publish.yml  scorecard.yml
docs/: ADAPTERS.md  CODEX_PROMPT_QUEUE_RUNBOOK.md  ECONOMIC_SEVERITY.md  ENTITLEMENTS.md  HELDOUT_PROVENANCE.md  LAUNCH_REVIEW.md  PERSONAS.md  REDTEAM_BLIND_FINDINGS.md  REDTEAM_FINDINGS.md  REDTEAM_HELDOUT_METHOD.md  REDTEAM_LAUNCH.md  REGRESSIONS.md  RESEARCH_LIBRARY.md  economic_assumptions.example.json
heel/: __init__.py  agents.py  agents_human.py  backtest.py  blind.py  blind_eval.py  chaining.py  classify.py  cli.py  containment.py  contracts.py  control.py  economics.py  entitlements.py  heldout_eval.py  importers.py  launch_review.py  mcp_server.py  model.py  orchestrator.py  profiles.py  regressions.py  rest.py  scenarios.py  scope.py  semantic.py  store.py  targets.py  web_export.py
heel/heldout/: targets.json  test_targets.json
heel/scenarios_lib/: community.json  research_owasp.json
scripts/codex/: local_queue_runner.py  queue_next.py
tests/: test_codex_queue_runner.py  test_heel.py  test_personas.py  test_regressions.py
web/: next.config.ts  package-lock.json  package.json
web/public/data/: snapshot.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: screens.tsx
web/src/lib/: ui.tsx
