[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heel-sim"
version = "1.1.0"
description = "MCP-first continuous SaaS abuse rehearsal for pre-launch review and authorized canary-only existing-product runs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ancilis" }]
keywords = ["security", "abuse-simulation", "mcp", "red-team", "agent", "appsec", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# v1 core is PURE STANDARD LIBRARY by design (DECISIONS D-001) — zero runtime dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/ancilis/heel"
Source = "https://github.com/ancilis/heel"
Issues = "https://github.com/ancilis/heel/issues"

[project.optional-dependencies]
# the LLM control loop uses the Anthropic Messages API via stdlib urllib (no SDK needed);
# this extra is only a convenience marker — no package is actually required.
llm = []

[project.scripts]
heel = "heel.cli:main"
heel-mcp = "heel.mcp_server:main"
heel-rest = "heel.rest:serve"

[tool.setuptools]
packages = ["heel"]

[tool.setuptools.package-data]
heel = ["scenarios_lib/*.json", "heldout/*.json"]

[tool.setuptools.exclude-package-data]
heel = ["**/__pycache__/*"]
